--- a/WpfHomework1.csproj
+++ b/WpfHomework1.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModel\AddViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="View\AddCommandView.xaml.cs">
       <DependentUpon>AddCommandView.xaml</DependentUpon>
