--- a/WpfHomework1.csproj
+++ b/WpfHomework1.csproj
@@ -113,7 +113,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Resource\" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="NoPhoto.png" />
   </ItemGroup>
